regressions/marans/SemanticErrors/selfExtend.ic
//output: Failed.

class Cat extends Cat {
      int x;
}